.opsera-cwa-0213/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cwa-0213
  labels:
    app: cwa-0213
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: cwa-0213
